--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ chromadb>=0.4.22
 langchain>=0.1.9
 langchain-community>=0.0.20
 langchain-openai>=0.0.5
+langchain-text-splitters>=0.0.1
 tiktoken>=0.5.2
 
 # Testing
