--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,9 @@ tqdm>=4.66.0
 
 # Phase 2: RAG dependencies
 chromadb>=0.4.22
-langchain>=0.1.9
-langchain-community>=0.0.20
-langchain-core>=0.1.0
-langchain-openai>=0.0.5
-langchain-text-splitters>=0.0.1
+langchain==0.1.0
 tiktoken>=0.5.2
+openai>=1.12.0
 
 # Testing
 pytest>=8.0.0
